k8s/crawler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler-deployment
  labels:
    app: crawler
  namespace: default
spec:
  containers:
  - name: crawler
    image: irisowo/cron:30min
    ports:
    - containerPort: 4000
      name: crawler
    volumeMounts:
      - name: history-dir
        mountPath: /sample_crawler/hostory
  volumes:
  - name: history-dir
    persistentVolumeClaim:
      claimName: pvc-demo
