k8s/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-test
  labels:
    app: crawler
  namespace: default
spec:
  containers:
  - name: crawler
    image: irisowo/cron:1day
    ports:
    - containerPort: 4000
      name: crawler
    volumeMounts:
      - name: history-dir
        mountPath: /sample_crawler/history
  volumes:
  - name: history-dir
    persistentVolumeClaim:
      claimName: pvc-test
