k8s/flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      nodeSelector:
        app-type: crawler
      containers:
        - name: flask-app-container
          image: ginnycosine/flask:v5
          ports:
            - containerPort: 9090
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: flask-app
