k8s/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: NodePort
  ports:
    - port: 9090
  selector:
    app: flask-app
