k8s/react-flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-flask-app-service
spec:
  type: LoadBalancer
  selector:
    component: react-flask-app
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
