k8s/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: react-app
  template:
    metadata:
      labels:
        component: react-app
    spec:
      nodeSelector:
        app-type: crawler
      containers:
        - name: react-app
          image: ginnycosine/react:v1
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  type: LoadBalancer
  selector:
    component: react-app
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
