k8s/react_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  type: NodePort
  selector:
    component: react-app
  ports:
    - port: 3000
      targetPort: 3000
